--- a/app/src/main/res/layout/layout_work_blurb.xml
+++ b/app/src/main/res/layout/layout_work_blurb.xml
@@ -245,60 +245,14 @@
             app:chipMinTouchTargetSize="0dp" />
     </com.google.android.material.chip.ChipGroup>
 
-    <LinearLayout
-        android:id="@+id/optionsLinearLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#F0F0F0"
-        android:layoutDirection="rtl"
-        android:orientation="horizontal"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/workStatisticsChipGroup">
-
-        <Button
-            android:id="@+id/readingListButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="0dp"
-            android:layoutDirection="ltr"
-            android:text="Read Later"
-            android:visibility="gone"
-            app:icon="@drawable/ic_blurb_options_reading_list_24" />
-
-        <Button
-            android:id="@+id/downloadButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="0dp"
-            android:layoutDirection="ltr"
-            android:text="Download"
-            app:icon="@drawable/ic_blurb_options_download_24" />
-
-        <Button
-            android:id="@+id/deleteButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="0dp"
-            android:layoutDirection="ltr"
-            android:text="Delete"
-            app:icon="@drawable/ic_blurb_options_delete_24" />
-
-    </LinearLayout>
-
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="16dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/optionsLinearLayout" />
+        app:layout_constraintTop_toBottomOf="@id/workStatisticsChipGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
