--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="end"
+    android:gravity="left"
     android:maxLines="1"
     android:padding="16dp"
     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">
