--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,12 +12,13 @@
 
     <color name="primaryColor">#ffffff</color>
     <color name="primaryLightColor">#ffffff</color>
-    <color name="primaryDarkColor">#f0f0f0</color>
-    <color name="secondaryColor">#ffffff</color>
-    <color name="secondaryLightColor">#ffffff</color>
-    <color name="secondaryDarkColor">#f0f0f0</color>
-    <color name="primaryTextColor">#454545</color>
-    <color name="secondaryTextColor">#454545</color>
+    <color name="primaryDarkColor">#cccccc</color>
+    <color name="secondaryColor">#d32f2f</color>
+    <color name="secondaryLightColor">#ff6659</color>
+    <color name="secondaryDarkColor">#9a0007</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#ffffff</color>
+
     <color name="uiHighlightColor">#900</color>
     <color name="chip_unselected_color">#E0E0E0</color>
 
