--- a/app/src/main/res/layout/fragment_work_list.xml
+++ b/app/src/main/res/layout/fragment_work_list.xml
@@ -14,11 +14,13 @@
         android:layout_width="match_parent">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="@color/primaryColor"
+            app:expandedTitleTextAppearance="@style/transparent_text"
             app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
-            app:titleEnabled="false">
+            app:titleEnabled="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -27,7 +29,7 @@
                 android:paddingTop="?attr/actionBarSize"
                 android:paddingEnd="@dimen/space_medium_16dp"
                 android:paddingBottom="@dimen/space_medium_16dp"
-                app:layout_collapseMode="parallax">
+                app:layout_collapseMode="pin">
 
                 <TextView
                     android:id="@+id/tagNameTextView"
@@ -54,8 +56,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:title="work" />
+                app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
