--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,9 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/ui_text_standard</item>
     </style>
+
+    <style name="transparent_text" parent="@android:style/TextAppearance">
+        <item name="android:textColor">#00000000</item>
+    </style>
+
 </resources>
