Add functionality to adjust text size

--- a/app/src/main/res/menu/menu_work_reader.xml
+++ b/app/src/main/res/menu/menu_work_reader.xml
@@ -4,4 +4,7 @@
     <item
         android:id="@+id/saveWork"
         android:title="Save This Work" />
+    <item
+        android:id="@+id/showReaderPreferences"
+        android:title="Appearance" />
 </menu>
