--- a/app/src/main/res/navigation/read.xml
+++ b/app/src/main/res/navigation/read.xml
@@ -10,4 +10,18 @@
         android:name="org.eidos.reader.ui.read.readinglist.ReadingListFragment"
         android:label="Read"
         tools:layout="@layout/fragment_reading_list" />
+
+    <include app:graph="@navigation/work" />
+
+    <action
+        android:id="@+id/action_show_work_info"
+        app:destination="@id/work">
+        <argument
+            android:name="workBlurb"
+            app:argType="org.eidos.reader.model.WorkBlurb" />
+        <argument
+            android:name="isStoredInDatabase"
+            app:argType="boolean"
+            android:defaultValue="false" />
+    </action>
 </navigation>
